# vendorverdict

./: .dockerignore  .env.backup  .env.example  .gitignore  Dockerfile  README.md  agent1qgcqf94pr5_data.json  docker-compose.yml  pyproject.toml  requirements.txt
docs/: ACTIVITY_TIMELINE.md  ADMIN_SETTINGS.md  ALERTS.md  API.md  AUTHENTICATION.md  AZURE_CONTAINER_APPS.md  BACKUPS.md  BUSINESS_METRICS_DASHBOARD.md  COMMERCIAL_PROPOSAL_PDF_EXPORT.md  COMMERCIAL_PROPOSAL_WORKFLOW.md  CONTRAST_ACCESSIBILITY.md  CUSTOMER_ACTIVATION_WORKFLOW.md  CUSTOMER_DEMO_FLOW.md  CUSTOMER_PROPOSAL_POLISH.md  CUSTOMER_REVIEW_OPERATIONS.md  CUSTOMER_SHARE_LINKS.md  CUSTOMER_SUCCESS_RENEWAL_WORKFLOW.md  DASHBOARD.md  EVIDENCE_EXTRACTION.md  GOOGLE_CLOUD_VM_DEPLOYMENT.md  LEAD_CAPTURE.md  LEAD_FOLLOW_UP.md  LEAD_MANAGEMENT.md  LEAD_NOTIFICATIONS.md  LOGIN_CONTRAST_FIX.md  MONITORING.md  MULTI_AGENT_COLLABORATION.md  MVP_CONTRACT.md  OPERATIONS.md  OPERATOR_BRIEFING.md  OPERATOR_BRIEFING_EMAIL.md  PAYMENT_PROTOCOL.md  PAYMENT_REQUEST_WORKFLOW.md  PAYMENT_TRACKING.md  PDF_EXPORT.md  PILOT_ONBOARDING_WORKFLOW.md  PILOT_OUTCOME_REPORTING.md  PILOT_PACKAGE.md  PILOT_READINESS_CHECKLIST.md  PILOT_REVIEW_DELIVERY.md  (+11 more)
scripts/: backup_vendorverdict.sh  check_vendorverdict_health.sh  deploy_gcp_vm.sh  install_gcp_vm.sh  restore_vendorverdict_backup.sh  run_demo.py  send_vendorverdict_alert.sh  status_vendorverdict.sh
tests/: test_activity_timeline.py  test_admin_settings.py  test_agents.py  test_api.py  test_auth.py  test_business_metrics_dashboard.py  test_commercial_proposals.py  test_dashboard.py  (+28 more)
(+89 files in other folders)
