[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vendorverdict"
version = "0.1.0"
description = "ASI:One-compatible vendor risk comparison agent for the Fetch.ai Innovation Lab hackathon."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "uagents>=0.23.6",
  "openai>=1.60.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "reportlab>=4.2.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.1",
]

[project.scripts]
vendorverdict = "vendorverdict.cli:main"
vendorverdict-api = "vendorverdict.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vendorverdict = ["data/*.json"]
